--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+app/models/qwen2.5-1.5b-instruct-q8_0.gguf filter=lfs diff=lfs merge=lfs -text
